--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 	<div class="container">
 		<div class="row mt-4">
-			<div class="col-sm-12"><h1>I am a designer who is interested in  <a href="" class="typewrite" data-period="2000" data-type='[ "research.", "animation.", "code.", "solving problems."]'>
+			<div class="col-sm-12"><h1>Hamzawy is a designer who <a href="" class="typewrite" data-period="2000" data-type='[ "researches.", "animates.", "codes.", "prototypes."]'>
 				<span class="wrap"></span>
 			  </a></h1></div>
 		</div>
