--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 			</div>	
 	</nav>
 	<!-- Body -->
-
 	<div class="container">
 		<div class="row mt-4">
 			<div class="col-sm-12"><h1>I'm a designer who  <a href="" class="typewrite" data-period="2000" data-type='["animates.", "codes.", "prototypes."]'>
@@ -59,6 +58,27 @@
 			</div>
 			<div class="col-sm-6 mt-3">
 				<img class="col" src="./images/solv_thumbnail.png">
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-sm-4">
+				<div class="recommendations">
+						<h3>Steve Burrows</h3>
+						<h6>General manager at Tigerspike</h6>
+						<p>Hamza is awesome. Great UI designer and great guy! I had the pleasure of working with him for a couple of years on a challenging app development project: Hamza kept going throughout the challenging times with characteristic good spirits and was always willing to go the extra mile when it mattered. One of those people I really hope to get the chance to work with again in the future.</p>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<h3>Rafal Manka</h3>
+				<h6>Senior Android Developer at Emirates</h6>
+				<p>Ahmed is a great professional and a colleague. He puts usability as one of the most important aspects of design. He was an important part of our team and I would choose to work with him on any project in the future.</p>
+			</div>
+			<div class="col-sm-4">
+				<div class="recommendations">
+					<h3>Erika Sipos</h3>
+					<h6>Human Resources at Tigerspike</h6>
+					<p>Funny, engaging, helpful, it was always a pleasure working with Hamza. What I've also appreciated in him was this interesting balance between being stubborn about things he believed in, and open minded to everything else. A great guy to have in any team!</p>
+				</div>
 			</div>
 		</div>
 	</div>
